# anagrams

./: .gitignore  CMakeLists.txt  README.md  anagram  index.html
Bruteforce/Engine/: engine.cpp  engine.h
Bruteforce/Runner/: .runner.h.swp  runner.cpp
include/: config.h  engine.h  remap.h  runner.h
src/: engine.cpp  remap.c  runner.cpp  server.c
